RESOLVED FIXED11730
Meta HTTP Refresh that contains a fraction / decimal get ignored.
https://bugs.webkit.org/show_bug.cgi?id=11730
Summary Meta HTTP Refresh that contains a fraction / decimal get ignored.
Troy Brandt
Reported 2006-11-30 17:02:51 PST
Meta HTTP Refresh that contains a fraction / decimal get ignored. For example something like this: <HTML> <HEAD> <META HTTP-EQUIV="Refresh" CONTENT="2.5"> <META HTTP-EQUIV="Pragma" CONTENT="no cache"> <META HTTP-EQUIV="Expires" CONTENT="-1"> </HEAD> <body> Hello World! </body> </HTML> Will just be ignored. Works in Firefox.
Attachments
Patch (1.31 KB, patch)
2006-11-30 21:14 PST, Mark Rowe (bdash)
ap: review+
Mark Rowe (bdash)
Comment 1 2006-11-30 20:16:48 PST
Confirmed with WebKit 418.9.1 and ToT.
Mark Rowe (bdash)
Comment 2 2006-11-30 21:14:14 PST
Created attachment 11701 [details] Patch There's no layout test included in this patch as I can't see how to make one that handles this case. fast/dom/Window/redirect-with-timer.html includes a meta-refresh test with a URL, but this case already works correctly with a decimal point. It is only the URL-less variant that is currently broken.
Alexey Proskuryakov
Comment 3 2006-12-03 01:36:17 PST
Comment on attachment 11701 [details] Patch r=me
Mark Rowe (bdash)
Comment 4 2006-12-03 16:28:42 PST
Landed in r17994.
Note You need to log in before you can comment on or make changes to this bug.