2006-12-03  Mark Rowe  <bdash@webkit.org>

Reviewed by Alexey.

        http://bugs.webkit.org/show_bug.cgi?id=11730
        Bug 11730: Meta HTTP Refresh that contains a fraction / decimal get ignored.

        * dom/Document.cpp:
        (WebCore::Document::processHttpEquiv): Parse the refresh interval as a double rather than an integer.


Canonical link: https://commits.webkit.org/15100@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@17994 268f45cc-cd09-0410-ab3c-d52691b4dbfc